--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,46 @@
-asgiref==3.4.1
-dj-database-url==0.5.0
-Django==3.2.9
-gunicorn==20.1.0
-psycopg2==2.9.2
-pytz==2021.3
-sqlparse==0.4.2
-whitenoise==4.0
+asgiref==3.3.4
+certifi==2021.5.30
+cffi==1.14.5
+chardet==4.0.0
+cryptography==3.4.7
+dateparser==1.0.0
+defusedxml==0.7.1
+Django==3.2.3
+django-3-jet==1.0.8
+django-anymail==8.3
+django-appconf==1.0.4
+django-bootstrap-form==3.4
+django-ckeditor==6.1.0
+django-grappelli==2.15.1
+django-imagekit==4.0.2
+django-js-asset==1.2.2
+django-sb-admin==5.5.1.1
+greenlet==1.1.0
+idna==2.10
+jet-bridge-base==1.0.1
+mysqlclient==2.0.3
+oauthlib==3.1.1
+pilkit==2.0
+Pillow==8.2.0
+prompt-toolkit==2.0.9
+pycparser==2.20
+PyJWT==2.1.0
+python-dateutil==2.8.1
+python-decouple==3.4
+python3-openid==3.2.0
+pytz==2021.1
+regex==2021.4.4
+requests==2.25.1
+requests-oauthlib==1.3.0
+six==1.16.0
+social-auth-core==4.1.0
+SQLAlchemy==1.4.18
+sqlparse==0.4.1
+tzlocal==2.1
+urllib3==1.26.5
+wcwidth==0.2.5
+djangorestframework==3.12.2
+gunicorn
+psycopg2
+dj-database-url
+dj-static
